k8s/overlays/shokohsc/deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: watson
spec:
  template:
    spec:
      containers:
        - name: watson
          image: shokohsc/watson
