k8s/overlays/shokohsc/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: watson
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: ca-cluster-issuer
    flame.pawelmalak/name: dev-watson
    flame.pawelmalak/url: watson.dev.shokohsc.home
    flame.pawelmalak/type: app
    flame.pawelmalak/icon: wrench
spec:
  rules:
  - host: watson.dev.shokohsc.home
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: watson
            port:
              number: 3000
  tls:
  - hosts:
    - watson.dev.shokohsc.home
    secretName: watson-cert
